--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 
   </head>
   <body>
-    <h1>HELLO !</h1>
-    <h2>WoRlD? </h2>
-    <p>
-      This is the body text
-    </p>
-    <img src="ImageName.jpg">
+    <h1> Hello WORLD!!!!!!!!!!!!!</h1>
   </body>
+
 </html>
