--- a/index.html
+++ b/index.html
@@ -1,9 +1,25 @@
-<html>
-  <head>
 
-  </head>
-  <body>
-    <h1> Hello WORLD!!!!!!!!!!!!!</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title> Choose your own adventure </title>
+<meta name="twitter:" content="robert brazello">
+
+<link rel="stylesheet" type="text/css" href="css data.css">
+
+<body>
+
+<h1>Welcome to: Life <br> <h2>A choose your own adventure game </h2></h1>
+
+
+<a href="intro.html" title="Click to enter..."> <img src="img/bigdoor.jpg" height=550></a>
+
+
+
+
+</body>
+
+
 
 </html>
