--- a/A.A.A.A.html
+++ b/A.A.A.A.html
@@ -18,11 +18,8 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
+<p>You get out and approach the passenger side window. The distressed couple is overjoyed that you have stopped to help. They didn’t have a cell phone and ask you to change the flat. What do you do? <br>
+  <br>Take all their money OR Fix the flat tire</p>
 
 
 <table align= center>
@@ -38,13 +35,14 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="A.A.A.A.final1.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="A.A.A.A.final2.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
+
 
   </tbody>
 
