--- a/A.A.A.B.html
+++ b/A.A.A.B.html
@@ -18,11 +18,9 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
+<p>You keep driving past the car with the flat tire and arrive at the hospital to see your friend. After spending quality time comforting your friend, a very attractive doctor enters the room. You are nervous to speak to them.<br>
+  <br>Strike up a conversation OR Stay quiet and try not to focus on your increasingly sweaty armpits.
+</p>
 
 
 <table align= center>
@@ -38,11 +36,11 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="A.A.A.B.final1.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="A.A.A.B.final2.html.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
 
