--- a/A.A.B.A.html
+++ b/A.A.B.A.html
@@ -18,11 +18,10 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
+<p> You drown your sorrows in the bucket of ice cream. As the sound of the spoon scraps the bottom of the bucket you realize you need to make a choice.
+<br>
+Delete Facebook and stop comparing yourself to others.
+<br>OR Finish the ice cream. </p>
 
 
 <table align= center>
@@ -38,13 +37,14 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="A.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="A.A.B.A.final2.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
+
 
   </tbody>
 
