--- a/A.A.html
+++ b/A.A.html
@@ -4,22 +4,60 @@
   <head>
     <meta charset="utf-8">
     <title> Choose your own adventure </title>
+<link rel="stylesheet" type="text/css" href="css data.css">
+
+<style>
+
+</style>
   </head>
 
 
 <body>
 
-<h1>Intro</h1>
-<p>RESTULT <br>
-  <br>Choices A B </p>
-<h5>Make your choice</h5>
-<p><a href="A.A.html">Choice A <br> <br> <br> </a> <a href="A.B.html"> Choice B </a> </p>
+<div id="myDIV"></div>
+
+<br><br><br><br>
+
+<p>You check the weather and find that it will rain today. You then notice a notification on your phone… which leads you to scroll through Facebook till you see a post from a friend who’s in the hospital.
+ <br>
+
+<p>Grab your keys and head over to the hospital OR
+   Send a message telling them to get well and keep scrolling through Facebook
+
+</p>
+<table align= center>
+  <th>
+    Choice 1
+  </th>
+  <th>
+    Choice 2
+  </th>
+
+<br>
+
+  <tbody>
+
+    <td>
+      <a href="A.A.A.html"> <br> <img src="img/door1.jpg" height=200> </a>
+    </td>
+
+    <td>
+      <a href="A.A.B.html">  <br>
+      <img src="img/door1.jpg" height=200> </a>
+    </td>
+
+
+  </tbody>
+
+
+</table>
+
 
 
 
 </body>
 
-  </head>
+
 
 
 </html>
