--- a/A.B.B.A.html
+++ b/A.B.B.A.html
@@ -18,12 +18,9 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
+<p>He looks up at you in bewilderment at the unexpected kindness you have shown. He asks if you have anything to eat.
 
- <br>
-
+<br>Offer to buy him lunch OR Tell him you don’t have anything and say goodbye. 
 
 <table align= center>
   <th>
@@ -38,11 +35,12 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="A.B.B.A.final1.html">  <br>
+      <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="A.B.B.A.final2.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
 
