--- a/A.B.html
+++ b/A.B.html
@@ -4,22 +4,59 @@
   <head>
     <meta charset="utf-8">
     <title> Choose your own adventure </title>
+<link rel="stylesheet" type="text/css" href="css data.css">
+
+<style>
+
+</style>
   </head>
 
 
 <body>
 
-<h1>Intro</h1>
-<p>RESTULT <br>
-  <br>Choices A B </p>
-<h5>Make your choice</h5>
-<p><a href="A.A.html">Choice A <br> <br> <br> </a> <a href="A.B.html"> Choice B </a> </p>
+<div id="myDIV"></div>
+
+<br><br><br><br>
+
+<p>You step outside and breath a deep breath of fresh air. You stop and notice the birds seem to be chirping a little sweeter, the sun is shining, and the flowers smell oh so nice.
+<br>
+ Hop in your car and flip a coin to see whether to make a left or right at each stop you come to.
+  <br>Grab your bike and take a stroll
+  </p>
+
+<table align= center>
+  <th>
+    Choice 1
+  </th>
+  <th>
+    Choice 2
+  </th>
+
+<br>
+
+  <tbody>
+
+    <td>
+      <a href="A.B.A.html"> <br> <img src="img/door1.jpg" height=200> </a>
+    </td>
+
+    <td>
+      <a href="A.B.B.html">  <br>
+      <img src="img/door1.jpg" height=200> </a>
+    </td>
+
+
+  </tbody>
+
+
+</table>
+
 
 
 
 </body>
 
-  </head>
+
 
 
 </html>
