--- a/A.html
+++ b/A.html
@@ -3,23 +3,65 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Choose your own adventure </title>
+    <title> A </title>
+<link rel="stylesheet" type="text/css" href="css data.css">
+
+<style>
+
+</style>
   </head>
 
 
 <body>
 
-<h1>Intro</h1>
-<p>RESTULT <br>
-  <br>Choices A B </p>
-<h5>Make your choice</h5>
-<p><a href="A.A.html" title="Are you sure?">Choice A <br> <br> <br> </a> <a href="A.B.html"> Choice B </a> </p>
+<div id="myDIV"></div>
+
+<br><br><br><br>
+
+<p>You wake up well rested and ready to start your day. What would you like to do?
+</p>
+
+<br>
+<br>
+<p>Check the weather OR 
+   Get ready and go on an adventure
+</p>
+
+
+<table align= center>
+  <th>
+    Choice 1
+  </th>
+  <th>
+    Choice 2
+  </th>
+
+<br>
+
+  <tbody>
+
+    <td>
+      <a href="A.A.html"> <br> <img src="img/door1.jpg" height=200> </a>
+    </td>
+
+    <td>
+      <a href="A.B.html">  <br>
+      <img src="img/door1.jpg" height=200> </a>
+    </td>
+
+
+
+  </tbody>
+
+
+</table>
+
 
 
 
 </body>
 
-  </head>
+
 
 
 </html>
