--- a/B.A.B.A.html
+++ b/B.A.B.A.html
@@ -18,12 +18,11 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
+<p>- You begin by taking phone calls and setting up meetings. Soon you are making deliveries and picking up packages. You realize that you are part of an illegal operation connected to the mafia.
 
- <br>
-
+  <br> Tell them you want out OR
+  <br>Make the best of it.
+  </p>
 
 <table align= center>
   <th>
@@ -38,13 +37,14 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="B.A.B.A.final1.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="B.A.B.B.final2.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
+
 
   </tbody>
 
