--- a/B.A.html
+++ b/B.A.html
@@ -18,12 +18,10 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
-
+<p>You put all your stuff on craigslist for cheap and sold it all in a couple days. After a long flight, you find yourself standing outside the airport.
+  <br>Go and find a job and a place to rent OR
+    <br>explore the city for a few days and get on a train heading west.
+<</p>
 
 <table align= center>
   <th>
@@ -38,13 +36,14 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="B.A.A.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="B.A.B.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
+
 
   </tbody>
 
