--- a/B.B.A.A.html
+++ b/B.B.A.A.html
@@ -18,12 +18,9 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
-
+<p>You find yourself tasked with making a decision that will affect the rest of your life. <br>
+  <br>Should you attend Graduate School, or do something else?</p>
+<h5>You must choose a door to enter</h5>
 
 <table align= center>
   <th>
@@ -32,17 +29,24 @@
   <th>
     Choice 2
   </th>
-
+  <th>
+    Choice 3
+  </th>
 <br>
 
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="B.B.A.A.final1.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="B.B.A.A.final2.html">  <br>
+      <img src="img/door1.jpg" height=200> </a>
+    </td>
+
+    <td>
+      <a href="XXXXXX.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
 
