--- a/B.B.B.B.html
+++ b/B.B.B.B.html
@@ -18,12 +18,9 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
-
+<p>You join the circus, but due to your lack of talent, you are asked to gain a bunch of weight and tattoo your face.
+<br>Do it OR <br> Forget that noise.
+</p>
 
 <table align= center>
   <th>
@@ -38,13 +35,14 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="B.B.B.B.final1.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="B.B.B.B.final2.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
+
 
   </tbody>
 
