--- a/B.B.B.html
+++ b/B.B.B.html
@@ -18,11 +18,9 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
+<p>You eat a sandwich. Now what?
+  <br>
+  Start a cult OR <br> Join the circus
 
 
 <table align= center>
@@ -38,11 +36,16 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="B.B.B.A.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="B.B.B.B.html">  <br>
+      <img src="img/door1.jpg" height=200> </a>
+    </td>
+
+    <td>
+      <a href="XXXXXX.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
 
