--- a/Intro.html
+++ b/Intro.html
@@ -3,17 +3,29 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title> Choose your own adventure </title>
+    <title> Intro</title>
 <link rel="stylesheet" type="text/css" href="css data.css">
 
+<style>
+
+</style>
   </head>
 
 
 <body>
 
+<div id="myDIV"></div>
+
 <br><br><br><br>
-<p>You find yourself tasked with making a decision that will affect the rest of your life. <br>
-  <br>Should you attend Graduate School or do something else?</p>
+
+<p>You wake up in your bed. Half a night’s sleep and the dread of the day starts to weigh down on you. So much to do. As you get out of bed you suddenly remember a quote…
+“You are the master of your own destiny, live each day as if it were your last.”
+
+You stop and ponder for a moment longer and begin to imagine what your day could look like if you took another path. What kind of day could it be? What if you lived this day as if it truly were your last?
+<br>
+<br>  Go back to bed OR
+<br>  Wake up, grab some strong coffee and reflect on your life
+</p>
 <h5>You must choose a door to enter</h5>
 
 <table align= center>
@@ -23,16 +35,12 @@
   <th>
     Choice 2
   </th>
-  <th>
-    Choice 3
-  </th>
 <br>
 
   <tbody>
 
     <td>
-      <a href="A.html"> <br>
-      <img src="img/door1.jpg" height=200> </a>
+      <a href="A.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
@@ -40,10 +48,7 @@
       <img src="img/door1.jpg" height=200> </a>
     </td>
 
-    <td>
-      <a href="A.B.html">  <br>
-      <img src="img/door1.jpg" height=200> </a>
-    </td>
+
 
   </tbody>
 
