--- a/A.A.A.html
+++ b/A.A.A.html
@@ -4,22 +4,58 @@
   <head>
     <meta charset="utf-8">
     <title> Choose your own adventure </title>
+<link rel="stylesheet" type="text/css" href="css data.css">
+
+<style>
+
+</style>
   </head>
 
 
 <body>
 
-<h1>Intro</h1>
-<p>RESTULT <br>
-  <br>Choices A B </p>
-<h5>Make your choice</h5>
-<p><a href="A.A.html">Choice A <br> <br> <br> </a> <a href="A.B.html"> Choice B </a> </p>
+<div id="myDIV"></div>
+
+<br><br><br><br>
+
+<p>On your way to the hospital, you see an elderly couple pulled over with a flat tire.  <br>
+  <br>Stop and help OR Keep driving. It’s raining. Could be a trap. Your friend needs you. 
+</p>
+
+
+<table align= center>
+  <th>
+    Choice 1
+  </th>
+  <th>
+    Choice 2
+  </th>
+
+<br>
+
+  <tbody>
+
+    <td>
+      <a href="A.A.A.A.html"> <br> <img src="img/door1.jpg" height=200> </a>
+    </td>
+
+    <td>
+      <a href="A.A.A.B.html">  <br>
+      <img src="img/door1.jpg" height=200> </a>
+    </td>
+
+
+  </tbody>
+
+
+</table>
+
 
 
 
 </body>
 
-  </head>
+
 
 
 </html>
