--- a/A.A.B.B.html
+++ b/A.A.B.B.html
@@ -18,12 +18,10 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
-
+<p>. You begin to shake the Facebook slumps and realize you have the rest of your life to live. What do you do?
+<br>Dress in your favorite outfit and hit the town. OR
+<br>Sit down and write that book you’ve always wanted to write. You know the one.
+</p>
 
 <table align= center>
   <th>
@@ -38,13 +36,15 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="A.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="A.A.B.B.final1.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
+
+
 
   </tbody>
 
