--- a/A.B.A.A.html
+++ b/A.B.A.A.html
@@ -18,12 +18,12 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
-
+<p>Your gut tells you to stop being a chicken and turn around.
+  <br>
+  Turn around. This was a dumb idea.  OR
+<br>
+Keep going.
+</p>
 
 <table align= center>
   <th>
@@ -37,12 +37,15 @@
 
   <tbody>
 
+
+
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="A.B.A.A.final1.html">  <br>
+      <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="A.B.A.A.final2.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
 
