--- a/A.B.A.B.html
+++ b/A.B.A.B.html
@@ -18,11 +18,11 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
+<p>You drive for a while longer when you see huge tents and hundreds of people walking towards them.
+  <br>
+  Keep driving OR
+  <br>Stop and check out what’s going on.
+</p>
 
 
 <table align= center>
@@ -37,12 +37,14 @@
 
   <tbody>
 
+
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="A.B.A.B.final1.html">  <br>
+      <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="A.B.A.B.final2.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
 
