--- a/A.B.A.html
+++ b/A.B.A.html
@@ -18,12 +18,10 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
-
+<p>After 2 hours of driving, you find yourself on the highway in an unfamiliar place. You are kind of uneasy about the whole thing.
+<br>
+<br>Use your GPS and get home OR
+<br> Keep driving.
 
 <table align= center>
   <th>
@@ -38,13 +36,14 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="A.B.A.A.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="A.B.A.B.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
+
 
   </tbody>
 
