--- a/A.B.B.B.html
+++ b/A.B.B.B.html
@@ -18,13 +18,12 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
-
-
+<p>You get to the center of town and enjoy a day of window shopping as well as a wonderful lunch. Life is great. As you wait in line to get ice cream, someone asks you how your day is going.
+<br>
+Tell them it’s fine and go about your business OR
+<br>
+Begin a conversation with them. 
+</p>
 <table align= center>
   <th>
     Choice 1
@@ -38,13 +37,14 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="A.B.B.B.final1.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="A.B.B.B.final2.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
+
 
   </tbody>
 
