--- a/A.B.B.html
+++ b/A.B.B.html
@@ -18,12 +18,13 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
+<p>You grab your bike and start to head over to the local town square. You see a homeless man sitting with his back up against the side of a building.
+<br>
+Stop your bike and ask him if there is anything you could do to help him OR
  <br>
+ Keep riding. Don’t make eye contact.
 
+</p>
 
 <table align= center>
   <th>
@@ -37,12 +38,14 @@
 
   <tbody>
 
+
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="A.B.B.A.html">  <br>
+      <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="A.B.B.B.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
 
