--- a/B.A.A.html
+++ b/B.A.A.html
@@ -18,12 +18,10 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
-
+<p>You find a job at a local restaurant and rent yourself a room from a really nice family. You begin to miss your friends and family.
+    <br>Remind yourself to focus on what you now have in front of you and carry on.
+      OR <br> Book a ticket home.
+</p>
 
 <table align= center>
   <th>
@@ -38,13 +36,15 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="B.A.A.A.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="B.A.A.B.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
+
+
 
   </tbody>
 
