--- a/B.A.B.html
+++ b/B.A.B.html
@@ -18,12 +18,10 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
-
+<p>You continue on to the next country and then the next. After traveling for a year, you are almost out of money. You have met some people who you have partied with who offer you a job. They seem to be making good money themselves.
+  <br> Seems legit. Take the job OR
+  <br>Hmm… seems shady. Politely decline.
+  </p>
 
 <table align= center>
   <th>
@@ -38,13 +36,14 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="B.A.B.A.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="B.A.B.B.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
+
 
   </tbody>
 
