--- a/B.B.B.A.html
+++ b/B.B.B.A.html
@@ -18,11 +18,10 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
-
- <br>
+<p>Your cult is very successful, but it’s actually really stressful, what with everyone asking you all these deep philosophical questions. You need a change.
+<br>Become a secret agent OR
+<br> Buy a boat and sail the world
+</p>
 
 
 <table align= center>
@@ -38,13 +37,15 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="B.B.B.A.final1.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="B.B.B.A.final2.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
+
+
 
   </tbody>
 
