--- a/B.B.html
+++ b/B.B.html
@@ -18,12 +18,12 @@
 
 <br><br><br><br>
 
-<p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
+<p>You begin to realize you lost track of what you dreamed of doing one day. Your younger self has somehow spoken to you through the remnants of memories long forgotten.
+<br>Quit your current path and start taking risks OR
+<br> Eat a sandwich
 
- <br>
 
+  </p>
 
 <table align= center>
   <th>
@@ -38,13 +38,14 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="B.B.A.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="B.B.B.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
+
 
   </tbody>
 
