--- a/A.A.A.A.html
+++ b/A.A.A.A.html
@@ -19,7 +19,7 @@
 <br><br><br><br>
 
 <p>You get out and approach the passenger side window. The distressed couple is overjoyed that you have stopped to help. They didn’t have a cell phone and ask you to change the flat. What do you do? <br>
-  <br>Take all their money OR Fix the flat tire</p>
+   <br> <br><br>Take all their money <br> <br> OR <br> <br> Fix the flat tire</p>
 
 
 <table align= center>
