--- a/A.A.A.B.html
+++ b/A.A.A.B.html
@@ -19,7 +19,7 @@
 <br><br><br><br>
 
 <p>You keep driving past the car with the flat tire and arrive at the hospital to see your friend. After spending quality time comforting your friend, a very attractive doctor enters the room. You are nervous to speak to them.<br>
-  <br>Strike up a conversation OR Stay quiet and try not to focus on your increasingly sweaty armpits.
+   <br> <br><br>Strike up a conversation <br> <br> OR <br> <br> Stay quiet and try not to focus on your increasingly sweaty armpits.
 </p>
 
 
