--- a/A.A.A.html
+++ b/A.A.A.html
@@ -19,7 +19,7 @@
 <br><br><br><br>
 
 <p>On your way to the hospital, you see an elderly couple pulled over with a flat tire.  <br>
-  <br>Stop and help OR Keep driving. It’s raining. Could be a trap. Your friend needs you. 
+   <br> <br><br>Stop and help <br> <br> OR <br> <br> Keep driving. It’s raining. Could be a trap. Your friend needs you. 
 </p>
 
 
