--- a/A.A.B.A.html
+++ b/A.A.B.A.html
@@ -19,9 +19,9 @@
 <br><br><br><br>
 
 <p> You drown your sorrows in the bucket of ice cream. As the sound of the spoon scraps the bottom of the bucket you realize you need to make a choice.
-<br>
+ <br> <br><br>
 Delete Facebook and stop comparing yourself to others.
-<br>OR Finish the ice cream. </p>
+<br> <br> OR <br> <br> Finish the ice cream. </p>
 
 
 <table align= center>
