--- a/A.A.B.B.html
+++ b/A.A.B.B.html
@@ -19,8 +19,7 @@
 <br><br><br><br>
 
 <p>. You begin to shake the Facebook slumps and realize you have the rest of your life to live. What do you do?
-<br>Dress in your favorite outfit and hit the town. OR
-<br>Sit down and write that book you’ve always wanted to write. You know the one.
+ <br> <br><br>Dress in your favorite outfit and hit the town. <br> <br> OR <br> <br> Sit down and write that book you’ve always wanted to write. You know the one.
 </p>
 
 <table align= center>
