--- a/A.A.html
+++ b/A.A.html
@@ -20,8 +20,8 @@
 
 <p>You check the weather and find that it will rain today. You then notice a notification on your phone… which leads you to scroll through Facebook till you see a post from a friend who’s in the hospital.
  <br>
-
-<p>Grab your keys and head over to the hospital OR
+ <br> <br>
+<p>Grab your keys and head over to the hospital <br> <br> OR <br> <br>
    Send a message telling them to get well and keep scrolling through Facebook
 
 </p>
