--- a/A.B.A.A.html
+++ b/A.B.A.A.html
@@ -19,9 +19,8 @@
 <br><br><br><br>
 
 <p>Your gut tells you to stop being a chicken and turn around.
-  <br>
-  Turn around. This was a dumb idea.  OR
-<br>
+ <br> <br>  <br>
+  Turn around. This was a dumb idea.  <br> <br> OR <br> <br>
 Keep going.
 </p>
 
