--- a/A.B.A.B.html
+++ b/A.B.A.B.html
@@ -19,9 +19,8 @@
 <br><br><br><br>
 
 <p>You drive for a while longer when you see huge tents and hundreds of people walking towards them.
-  <br>
-  Keep driving OR
-  <br>Stop and check out what’s going on.
+ <br> <br>  <br>
+  Keep driving <br> <br> OR <br> <br>Stop and check out what’s going on
 </p>
 
 
