--- a/A.B.A.html
+++ b/A.B.A.html
@@ -19,8 +19,8 @@
 <br><br><br><br>
 
 <p>After 2 hours of driving, you find yourself on the highway in an unfamiliar place. You are kind of uneasy about the whole thing.
-<br>
-<br>Use your GPS and get home OR
+ <br> <br><br>
+<br>Use your GPS and get home <br> <br> OR <br> 
 <br> Keep driving.
 
 <table align= center>
