--- a/A.B.B.A.html
+++ b/A.B.B.A.html
@@ -20,7 +20,7 @@
 
 <p>He looks up at you in bewilderment at the unexpected kindness you have shown. He asks if you have anything to eat.
 
-<br>Offer to buy him lunch OR Tell him you don’t have anything and say goodbye. 
+ <br> <br><br>Offer to buy him lunch <br> <br> OR <br> <br> Tell him you don’t have anything and say goodbye. 
 
 <table align= center>
   <th>
