--- a/A.B.B.B.html
+++ b/A.B.B.B.html
@@ -19,10 +19,9 @@
 <br><br><br><br>
 
 <p>You get to the center of town and enjoy a day of window shopping as well as a wonderful lunch. Life is great. As you wait in line to get ice cream, someone asks you how your day is going.
-<br>
-Tell them it’s fine and go about your business OR
-<br>
-Begin a conversation with them. 
+ <br> <br><br>
+Tell them it’s fine and go about your business <br> <br> OR <br> <br>
+Begin a conversation with them.
 </p>
 <table align= center>
   <th>
