--- a/A.B.B.html
+++ b/A.B.B.html
@@ -19,8 +19,8 @@
 <br><br><br><br>
 
 <p>You grab your bike and start to head over to the local town square. You see a homeless man sitting with his back up against the side of a building.
-<br>
-Stop your bike and ask him if there is anything you could do to help him OR
+ <br> <br><br>
+Stop your bike and ask him if there is anything you could do to help him <br> <br> OR <br> 
  <br>
  Keep riding. Don’t make eye contact.
 
