--- a/A.B.html
+++ b/A.B.html
@@ -19,8 +19,8 @@
 <br><br><br><br>
 
 <p>You step outside and breath a deep breath of fresh air. You stop and notice the birds seem to be chirping a little sweeter, the sun is shining, and the flowers smell oh so nice.
-<br>
- Hop in your car and flip a coin to see whether to make a left or right at each stop you come to.
+ <br> <br><br>
+ Hop in your car and flip a coin to see whether to make a left or right at each stop you come to.<br> <br> OR <br>
   <br>Grab your bike and take a stroll
   </p>
 
