--- a/A.html
+++ b/A.html
@@ -20,10 +20,10 @@
 
 <p>You wake up well rested and ready to start your day. What would you like to do?
 </p>
-
+ <br>
 <br>
 <br>
-<p>Check the weather OR 
+<p>Check the weather <br> <br> OR <br> <br>
    Get ready and go on an adventure
 </p>
 
