--- a/B.A.A.html
+++ b/B.A.A.html
@@ -19,8 +19,8 @@
 <br><br><br><br>
 
 <p>You find a job at a local restaurant and rent yourself a room from a really nice family. You begin to miss your friends and family.
-    <br>Remind yourself to focus on what you now have in front of you and carry on.
-      OR <br> Book a ticket home.
+ <br> <br>    <br>Remind yourself to focus on what you now have in front of you and carry on.
+    <br> <br> OR <br> <br> Book a ticket home.
 </p>
 
 <table align= center>
