--- a/B.A.B.A.html
+++ b/B.A.B.A.html
@@ -20,8 +20,8 @@
 
 <p>- You begin by taking phone calls and setting up meetings. Soon you are making deliveries and picking up packages. You realize that you are part of an illegal operation connected to the mafia.
 
-  <br> Tell them you want out OR
-  <br>Make the best of it.
+ <br> <br>  <br> Tell them you want out <br> <br> OR <br> 
+   <br>Make the best of it.
   </p>
 
 <table align= center>
