--- a/B.A.B.html
+++ b/B.A.B.html
@@ -19,8 +19,7 @@
 <br><br><br><br>
 
 <p>You continue on to the next country and then the next. After traveling for a year, you are almost out of money. You have met some people who you have partied with who offer you a job. They seem to be making good money themselves.
-  <br> Seems legit. Take the job OR
-  <br>Hmm… seems shady. Politely decline.
+ <br> <br>  <br> Seems legit. Take the job <br> <br> OR <br> <br> Hmm… seems shady. Politely decline.
   </p>
 
 <table align= center>
