--- a/B.A.html
+++ b/B.A.html
@@ -19,8 +19,7 @@
 <br><br><br><br>
 
 <p>You put all your stuff on craigslist for cheap and sold it all in a couple days. After a long flight, you find yourself standing outside the airport.
-  <br>Go and find a job and a place to rent OR
-    <br>explore the city for a few days and get on a train heading west.
+ <br> <br>  <br>Go and find a job and a place to rent<br> <br> OR <br> <br> explore the city for a few days and get on a train heading west.
 <</p>
 
 <table align= center>
