--- a/B.B.B.A.html
+++ b/B.B.B.A.html
@@ -19,8 +19,7 @@
 <br><br><br><br>
 
 <p>Your cult is very successful, but it’s actually really stressful, what with everyone asking you all these deep philosophical questions. You need a change.
-<br>Become a secret agent OR
-<br> Buy a boat and sail the world
+ <br> <br><br>Become a secret agent <br> <br> OR <br> <br>Buy a boat and sail the world
 </p>
 
 
