--- a/B.B.B.B.html
+++ b/B.B.B.B.html
@@ -19,7 +19,7 @@
 <br><br><br><br>
 
 <p>You join the circus, but due to your lack of talent, you are asked to gain a bunch of weight and tattoo your face.
-<br>Do it OR <br> Forget that noise.
+ <br> <br><br>Do it <br> <br> OR <br> <br> Forget that noise.
 </p>
 
 <table align= center>
