--- a/B.B.B.html
+++ b/B.B.B.html
@@ -19,8 +19,8 @@
 <br><br><br><br>
 
 <p>You eat a sandwich. Now what?
-  <br>
-  Start a cult OR <br> Join the circus
+ <br> <br>  <br>
+  Start a cult <br> <br> OR <br> <br> Join the circus
 
 
 <table align= center>
@@ -44,9 +44,7 @@
       <img src="img/door1.jpg" height=200> </a>
     </td>
 
-    <td>
-      <a href="XXXXXX.html">  <br>
-      <img src="img/door1.jpg" height=200> </a>
+
     </td>
 
   </tbody>
