--- a/B.B.html
+++ b/B.B.html
@@ -19,7 +19,7 @@
 <br><br><br><br>
 
 <p>You begin to realize you lost track of what you dreamed of doing one day. Your younger self has somehow spoken to you through the remnants of memories long forgotten.
-<br>Quit your current path and start taking risks OR
+ <br> <br><br>Quit your current path and start taking risks <br> <br> OR <br> 
 <br> Eat a sandwich
 
 
