--- a/B.html
+++ b/B.html
@@ -19,8 +19,8 @@
 <br><br><br><br>
 
 <p>You drink your coffee and begin to write out everything on your mind. You reflect and realize that you may have lost sight of living life to the fullest. You need to make a change. You glance at a picture of you from years ago and wonder about your next step.
-  <br> Sell everything you own and book a one-way ticket to that place you’ve always dreamed of going
-  OR <br> Go through your old journals and photos
+   <br> <br><br> Sell everything you own and book a one-way ticket to that place you’ve always dreamed of going
+  OR <br><br> Go through your old journals and photos
 
   </p>
 
