--- a/Intro.html
+++ b/Intro.html
@@ -16,14 +16,14 @@
 
 <div id="myDIV"></div>
 
-<br><br><br><br>
+<br><br>
 
 <p>You wake up in your bed. Half a night’s sleep and the dread of the day starts to weigh down on you. So much to do. As you get out of bed you suddenly remember a quote…
 “You are the master of your own destiny, live each day as if it were your last.”
 
 You stop and ponder for a moment longer and begin to imagine what your day could look like if you took another path. What kind of day could it be? What if you lived this day as if it truly were your last?
 <br>
-<br>  Go back to bed OR
+<br>  Go back to bed <br><br>OR <br>
 <br>  Wake up, grab some strong coffee and reflect on your life
 </p>
 <h5>You must choose a door to enter</h5>
