--- a/A.A.B.html
+++ b/A.A.B.html
@@ -19,8 +19,8 @@
 <br><br><br><br>
 
 <p>You spend more than an hour on Facebook before you realize the constant comparison with the lives of others has begun to eat away at your self-esteem.
-  <br> Go and eat ice cream. Who cares… life is meaningless.
-<br> OR Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
+ <br> <br>  <br> Go and eat ice cream. Who cares… life is meaningless.
+<br> <br> OR <br> <br> Pick yourself up and say aloud, “I am smart, I am beautiful, and by golly, people like me.”
 
  <br>
 
@@ -38,11 +38,11 @@
   <tbody>
 
     <td>
-      <a href="A.A.B.B.html"> <br> <img src="img/door1.jpg" height=200> </a>
+      <a href="A.A.B.A.html"> <br> <img src="img/door1.jpg" height=200> </a>
     </td>
 
     <td>
-      <a href="A.A.B.A.html">  <br>
+      <a href="A.A.B.B.html">  <br>
       <img src="img/door1.jpg" height=200> </a>
     </td>
 
